--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </ul>
   </nav>
   <main>
-    <img id="heroimg" src="\zen-garden-with-autumn-colors.jpg" alt="body_image">
+    <img id="heroimg" src="zen-garden-with-autumn-colors.jpg" alt="body_image">
     <div id="wrapper">
       <h2>Welcome to Gabriel Green Garden House</h2>
       <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using
