--- a/plants.html
+++ b/plants.html
@@ -22,37 +22,37 @@
     </ul>
   </nav>
   <main>
-    <img id="heroimg" class="desktop" src="\curly-tendrils-of-potted-plants-on-wooden-shelf.jpg">
+    <img id="heroimg" class="desktop" src="curly-tendrils-of-potted-plants-on-wooden-shelf.jpg">
     <div id="wrapper">
       <h2>Plants at our Gabriel Green Garden House</h2>
       <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
       </p>
       <div id="categories">
         <section>
-          <img class="vines" src="/vines_image.jpg" alt="Vines_img">
+          <img class="vines" src="vines_image.jpg" alt="Vines_img">
           <h3>Vines</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, labore et dolore magna aliqua. veritatis et quasi architecto beatae vitae dicta sunt explicabo.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
         </section>
         <section>
-          <img src="\evergreens_image.jpg" alt="Evergreens_img">
+          <img src="evergreens_image.jpg" alt="Evergreens_img">
           <h3>Evergreens</h3>
           <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
         </section>
         <section>
-          <img src="\floweringshrubs_image.jpg" alt="Shrubs_img">
+          <img src="floweringshrubs_image.jpg" alt="Shrubs_img">
           <h3>Flowering Shrubs</h3>
           <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pai truth, the
             master-builder of human happiness.</p>
         </section>
         <section>
-          <img src="\trees_image.jpg" alt="Trees_img">
+          <img src="trees_image.jpg" alt="Trees_img">
           <h3>Trees</h3>
           <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui
             officia
             deserunt mollitia animi, id est laborum et dolorum fuga.</p>
         </section>
         <section>
-          <img src="\anuals_image.jpg" alt="Anuals_img">
+          <img src="anuals_image.jpg" alt="Anuals_img">
           <h3>Anuals</h3>
           <p>adalah contoh teks atau dummy dalam industri percetakan dan penataan huruf atau typesetting. Lorem Ipsum telah menjadi standar contoh teks sejak tahu"</p>
         </section>
